--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
     "files.associations": {
         "threads.h": "c",
         "pthread.h": "c"
+    },
+    "cmake.debugConfig": {
+        "args": ["-n","heweisheng"]
     }
 }
