--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,14 @@
 {
     "files.associations": {
         "threads.h": "c",
-        "pthread.h": "c"
+        "pthread.h": "c",
+        "memory": "cpp",
+        "tuple": "cpp",
+        "type_traits": "cpp",
+        "utility": "cpp",
+        "xmemory0": "cpp",
+        "xtr1common": "cpp",
+        "xutility": "cpp"
     },
     "cmake.debugConfig": {
         "args": ["-n","heweisheng"]
